Disable keep_run

--- a/base.ini
+++ b/base.ini
@@ -57,7 +57,7 @@ hostppn = 32
 wrf_ntasks = @hostppn
 
 [extra]
-keep_run = true
+keep_run = false
 variablelist_files = data/iofields_wrfout.txt
 
 
