Update spinup configs

--- a/spinup_prior.ini
+++ b/spinup_prior.ini
@@ -1,4 +1,4 @@
-# SPINUP-PRIOR
+# SPINUP_PRIOR
 #
 # To spin up CO2 concentration for prior fluxes.
 
@@ -7,15 +7,10 @@ inherit = base.ini
 [experiment]
 name = spinup_prior
 start_date       = 2021-06-03 00:00
-cycle_start_date = 2021-06-03 00:00
-cycle_end_date   = 2021-06-17 00:00
 end_date         = 2021-06-17 00:00
 
 [directories]
 wrf = $HOME/wrf/WRFV3_1tracer
-
-[time]
-cycle_period = 24 h
 
 [run]
 icbc = true
