--- a/spinup_truth.ini
+++ b/spinup_truth.ini
@@ -1,4 +1,4 @@
-# SPINUP-TRUTH
+# SPINUP_TRUTH
 #
 # To spin up CO2 concentration for true fluxes.
 
@@ -7,8 +7,6 @@ inherit = base.ini
 [experiment]
 name = spinup_truth
 start_date       = 2021-06-03 00:00
-cycle_start_date = 2021-06-03 00:00
-cycle_end_date   = 2021-06-17 00:00
 end_date         = 2021-06-17 00:00
 
 [directories]
