--- a/base.ini
+++ b/base.ini
@@ -4,6 +4,12 @@
 # Created for trace 0.18.
 #
 
+[experiment]
+start_date       = 2021-06-03 00:00
+cycle_start_date = 2021-06-17 00:00
+cycle_end_date   = 2021-08-01 00:00
+end_date         = 2021-08-01 00:00
+
 [directories]
 output = $WORK/output/wp2
 icbc = $WORK/data/era5/europe
@@ -43,6 +49,8 @@ dataset = era5
 use_chem = true
 
 [chem_icbc]
+chem_ic_opt = global
+chem_ic_file = $WORK/data/trace_input/co2_ic/cams_co2_2021-06-03_00:00:00.nc
 chem_bc_dataset = cams-inversion
 chem_bc_dir = $WORK/data/cams/co2_surface_optimized
 chem_bc_file_format = *_%Y%m.nc
