--- a/perfect.ini
+++ b/perfect.ini
@@ -6,16 +6,23 @@ inherit = base.ini
 
 [experiment]
 name = perfect
-start_date       = 2021-06-03 00:00
-cycle_start_date = 2021-06-17 00:00
-cycle_end_date   = 2021-08-01 00:00
-end_date         = 2021-08-01 00:00
 
 [directories]
 wrf = $HOME/wrf/WRFV3_40tracers
 
 [time]
 wrfout_interval = 0
+
+[init]
+variables = '''
+  spinup = /proj/naiss2025-6-80/output/wp2/spinup_perfect
+
+'''
+
+commands = '''
+  traceinit <spinup> <exp_dir> --alltimes --optional
+
+'''
 
 [run]
 icbc = true
@@ -28,15 +35,10 @@ forecast = true
 [tracers]
 num_tracers = 40
 
-[chem_icbc]
-chem_ic_opt = global
-chem_ic_file = data/wrfinput_d01_2021-06-17_00:00:00_truth
-
 [chem_obs]
 satellite_obs_dir = obs/ideal
 satellite_obs_file_format = *_%Y-%m-%d_%H:%M:%S.dat
-satellite_perturb_obs = true
-satellite_perturb_obs_sigma = 1.0
+satellite_perturb_obs = false
 satellite_xco2_error = 4.0
 
 [chem_enkf]
