--- a/truth.ini
+++ b/truth.ini
@@ -6,13 +6,20 @@ inherit = base.ini
 
 [experiment]
 name = truth
-start_date       = 2021-06-17 00:00
-cycle_start_date = 2021-06-17 00:00
-cycle_end_date   = 2021-08-01 00:00
-end_date         = 2021-08-01 00:00
 
 [directories]
 wrf = $HOME/wrf/WRFV3_1tracer
+
+[init]
+variables = '''
+  spinup = /proj/naiss2025-6-80/output/wp2/spinup_truth
+
+'''
+
+commands = '''
+  traceinit <spinup> <exp_dir> --alltimes --optional
+
+'''
 
 [run]
 icbc = true
@@ -20,10 +27,6 @@ chem_ic = true
 chem_bc2 = true
 chem_flux = true
 forecast = true
-
-[chem_icbc]
-chem_ic_opt = global
-chem_ic_file = data/wrfinput_d01_2021-06-17_00:00:00_truth
 
 [chem_flux]
 use_parameters_bio = true
