Update path to satellite_ideal

--- a/ideal.ini
+++ b/ideal.ini
@@ -36,7 +36,7 @@ forecast = true
 num_tracers = 40
 
 [chem_obs]
-satellite_obs_dir = obs/ideal
+satellite_obs_dir = obs/satellite_ideal
 satellite_obs_file_format = *_%Y-%m-%d_%H:%M:%S.dat
 satellite_perturb_obs = false
 satellite_xco2_error = 10.0
